# lol_agent

./: .gitignore  CLAUDE.md  LOL_Agent_DataSchema_V2.0.md  LOL_Agent_系统设计说明书_V2.0.md  PROGRESS.md  README.md  Rule Engine优化.md  config.py  lol_agent_final_feasible_plan_cn.md  lol_agent_lightweight_rebuild_full_guide_cn (1).md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
capture/: roi_manager.py  screen_capture.py
configs/: roi_config.json  roi_config_live.json
docs/: PROGRESS.md  data_schema.md  ocr_optimization_plan.md  optimization_v2.md  optimization_v3.md  v2_diff_analysis.md  v2_implementation_plan.md
memory/: fight_memory.py  hero_memory.py  memory_v2.py  objective_memory.py  temporal_memory.py
models/: game_state.py
overlay/: overlay_ui.py
parser/: state_parser.py
perception/: detection_summary.py  minimap_parser.py  ocr_engine.py  yolo_infer.py
reasoning/: context_engine.py  decision_engine_v2.py  feature_engine.py  goal_engine.py  llm_engine.py  rule_engine.py  state_engine.py
schemas/: __init__.py  decision.py  economy.py  feature_bundle.py  goal.py  hero.py  map.py  objective.py  skill.py  state.py  wave.py
scripts/: analyze_data.py  build_center_dataset.py  convert_voc_to_yolo.py  train_yolo.py
tests/: test_capture.py  test_config.py  test_context_engine.py  test_decision_engine_v2.py  test_feature_engine.py  test_game_state.py  test_goal_engine.py  test_llm_engine.py  test_main.py  test_memory_v2.py  test_minimap_parser.py  test_ocr.py  test_overlay.py  test_parsing.py  test_perception.py  test_rule_engine.py  (+5 more)
(+727 files in other folders)
